style: reformat all code with google-java-format