@@ -15,81 +15,80 @@ import net.dv8tion.jda.api.utils.FileUpload;
 
 public class SerializableMessageArray {
 
-    @Expose
-    private final int version = 2;
+  @Expose private final int version = 2;
 
-    @Expose(deserialize = false, serialize = false)
-    public User fromUser;
+  @Expose(deserialize = false, serialize = false)
+  public User fromUser;
 
-    @Expose(deserialize = false, serialize = false)
-    private String attachmentsChannelId;
+  @Expose(deserialize = false, serialize = false)
+  private String attachmentsChannelId;
 
-    @Expose
-    @SerializedName("to")
-    private SerializableMessageAuthor from;
+  @Expose
+  @SerializedName("to")
+  private SerializableMessageAuthor from;
 
-    @Expose
-    private List<SerializableMessage> messages = new ArrayList<>();
+  @Expose private List<SerializableMessage> messages = new ArrayList<>();
 
-    public SerializableMessageArray(String attachmentsChannelId, User from) {
-        this.attachmentsChannelId = attachmentsChannelId;
-        this.fromUser = from;
+  public SerializableMessageArray(String attachmentsChannelId, User from) {
+    this.attachmentsChannelId = attachmentsChannelId;
+    this.fromUser = from;
 
-        this.from = new SerializableMessageAuthor();
-        this.from.setId(from.getIdLong());
-        this.from.setName(from.getAsTag());
-        this.from.setAvatarUrl(from.getAvatarUrl());
+    this.from = new SerializableMessageAuthor();
+    this.from.setId(from.getIdLong());
+    this.from.setName(from.getAsTag());
+    this.from.setAvatarUrl(from.getAvatarUrl());
+  }
+
+  public void addMessage(Message message) {
+    SerializableMessage serializableMessage = serializeMessage(message);
+    serializableMessage.addAttachments(sendAttachments(message));
+    serializableMessage.addEmbeds(message.getEmbeds());
+
+    messages.add(serializableMessage);
+  }
+
+  private List<Message.Attachment> sendAttachments(Message message) {
+    if (message.getAttachments().isEmpty()) {
+      return List.of();
     }
 
-    public void addMessage(Message message) {
-        SerializableMessage serializableMessage = serializeMessage(message);
-        serializableMessage.addAttachments(sendAttachments(message));
-        serializableMessage.addEmbeds(message.getEmbeds());
+    List<Message.Attachment> attachmentAccumulator = new ArrayList<>();
 
-        messages.add(serializableMessage);
+    TextChannel attachmentsChannel =
+        Optional.ofNullable(message.getJDA().getTextChannelById(attachmentsChannelId))
+            .orElseThrow();
+
+    for (Message.Attachment attachment : message.getAttachments()) {
+      CompletableFuture<InputStream> attachmentStream = attachment.getProxy().download();
+      Message attachmentMessage =
+          attachmentsChannel
+              .sendMessage("Attachment of @" + message.getAuthor().getAsTag())
+              .addFiles(FileUpload.fromData(attachmentStream.join(), attachment.getFileName()))
+              .complete();
+
+      attachmentAccumulator.addAll(attachmentMessage.getAttachments());
     }
 
-    private List<Message.Attachment> sendAttachments(Message message) {
-        if (message.getAttachments().isEmpty()) {
-            return List.of();
-        }
+    return Collections.unmodifiableList(attachmentAccumulator);
+  }
 
-        List<Message.Attachment> attachmentAccumulator = new ArrayList<>();
+  private SerializableMessage serializeMessage(Message message) {
+    SerializableMessage serializableMessage = new SerializableMessage();
 
-        TextChannel attachmentsChannel = Optional.ofNullable(message.getJDA().getTextChannelById(attachmentsChannelId))
-                .orElseThrow();
+    SerializableMessageAuthor serializableAuthor = new SerializableMessageAuthor();
+    MessageType messageType = MessageType.fromMessage(message);
+    User author = messageType == MessageType.TARGET ? fromUser : message.getAuthor();
 
-        for (Message.Attachment attachment : message.getAttachments()) {
-            CompletableFuture<InputStream> attachmentStream =
-                    attachment.getProxy().download();
-            Message attachmentMessage = attachmentsChannel
-                    .sendMessage("Attachment of @" + message.getAuthor().getAsTag())
-                    .addFiles(FileUpload.fromData(attachmentStream.join(), attachment.getFileName()))
-                    .complete();
+    serializableAuthor.setAvatarUrl(author.getAvatarUrl());
+    serializableAuthor.setName(author.getAsTag());
+    serializableAuthor.setId(author.getIdLong());
 
-            attachmentAccumulator.addAll(attachmentMessage.getAttachments());
-        }
+    serializableMessage.setMessageType(messageType);
 
-        return Collections.unmodifiableList(attachmentAccumulator);
-    }
-
-    private SerializableMessage serializeMessage(Message message) {
-        SerializableMessage serializableMessage = new SerializableMessage();
-
-        SerializableMessageAuthor serializableAuthor = new SerializableMessageAuthor();
-        MessageType messageType = MessageType.fromMessage(message);
-        User author = messageType == MessageType.TARGET ? fromUser : message.getAuthor();
-
-        serializableAuthor.setAvatarUrl(author.getAvatarUrl());
-        serializableAuthor.setName(author.getAsTag());
-        serializableAuthor.setId(author.getIdLong());
-
-        serializableMessage.setMessageType(messageType);
-
-        serializableMessage.setAuthor(serializableAuthor);
-        serializableMessage.setContent(message.getContentRaw());
-        serializableMessage.setEdited(message.isEdited());
-        serializableMessage.setCreationTimestamp(message.getTimeCreated().toInstant());
-        return serializableMessage;
-    }
+    serializableMessage.setAuthor(serializableAuthor);
+    serializableMessage.setContent(message.getContentRaw());
+    serializableMessage.setEdited(message.isEdited());
+    serializableMessage.setCreationTimestamp(message.getTimeCreated().toInstant());
+    return serializableMessage;
+  }
 }
